--- a/package.json
+++ b/package.json
@@ -6,17 +6,56 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "lint": "eslint --fix --max-warnings 0 --ext .tsx .",
+    "test: watch": "jest --watch",
+    "test": "jest -u"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "0.2.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/native": "6.1.9",
+    "@react-navigation/stack": "6.3.20",
+    "@shopify/flash-list": "1.4.3",
+    "axios": "^1.6.5",
     "expo": "~49.0.15",
+    "expo-haptics": "~12.4.0",
+    "expo-image": "~1.3.5",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "jest": "29.7.0",
+    "jest-expo": "49.0.0",
+    "lodash": "^4.17.21",
+    "moment": "2.30.1",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "13.9.0",
+    "react-native-svg-transformer": "^1.3.0",
+    "reactotron-plugin-zustand": "^1.0.3",
+    "responsive-react-native": "^1.0.2",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@rocketseat/eslint-config": "2.1.0",
+    "@testing-library/react-native": "12.4.3",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "29.5.11",
+    "@types/lodash": "4.14.202",
     "@types/react": "~18.2.14",
+    "@typescript-eslint/eslint-plugin": "6.18.0",
+    "eslint": "8.56.0",
+    "eslint-config-standard-with-typescript": "43.0.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-n": "16.6.1",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "eslint-plugin-unused-imports": "3.0.0",
+    "reactotron-react-native": "5.0.4",
     "typescript": "^5.1.3"
   },
   "private": true
