--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,103 @@
 {
   "extends": "expo/tsconfig.base",
+  "jsx": "react-jsx",
   "compilerOptions": {
-    "strict": true
-  }
+    "strict": true,
+    "skipLibCheck": true,
+    "allowJs": false,
+    "sourceMap": true,
+    "noEmit": true,
+    "noImplicitReturns": true,
+    "baseUrl": "./src",
+    "paths": {
+      "src/*": [
+        "./src/*"
+      ],
+      "@components/*": [
+        "./components/*"
+      ],
+      "@components": [
+        "./components"
+      ],
+      "@helpers/*": [
+        ".utils/helpers/*"
+      ],
+      "@helpers": [
+        ".utils/helpers"
+      ],
+      "@screens/*": [
+        "./screens/*"
+      ],
+      "@screens": [
+        "./screens"
+      ],
+      "@services/*": [
+        "./services/*"
+      ],
+      "@services": [
+        "./services"
+      ],
+      "@store/*": [
+        "./store/*"
+      ],
+      "@store": [
+        "./store"
+      ],
+      "@themes/*": [
+        "./themes/*"
+      ],
+      "@themes": [
+        "./themes"
+      ],
+      "@assets/*": [
+        "./assets/*"
+      ],
+      "@assets": [
+        "./assets"
+      ],
+      "@config/*": [
+        "./config/*"
+      ],
+      "@config": [
+        "./config"
+      ],
+      "@navigator/*": [
+        "./navigators/*"
+      ],
+      "@navigator": [
+        "./navigators"
+      ],
+      "@hooks/*": [
+        "./hooks/*"
+      ],
+      "@hooks": [
+        "./hooks"
+      ],
+      "@types/*": [
+        "./utils/types/*"
+      ],
+      "@types": [
+        "./utils/types"
+      ],
+      "@constants/*": [
+        "./utils/constants/*"
+      ],
+      "@constants": [
+        "./utils/constants"
+      ]
+    },
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
+  },
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "./.eslintrc.js"
+  ]
 }
