--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo-google-fonts/roboto": "0.2.3",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "6.1.9",
+    "@react-navigation/native-stack": "6.9.17",
     "@react-navigation/stack": "6.3.20",
     "@shopify/flash-list": "1.4.3",
     "axios": "^1.6.5",
@@ -31,6 +32,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.3.0",
     "reactotron-plugin-zustand": "^1.0.3",
